# synaptic

./: .env.example  .gitignore  GETTING-STARTED.md  README.md  SECURITY-CHECKLIST.md  docker-compose.yml  pyproject.toml
.githooks/: pre-push
assets/: README.md
config/: config.example.yaml
examples/vault/00 - INBOX/: 2026-06-08-inbox-local-ai-privacy-thought.md
examples/vault/01 - NOTES/books/: 2026-05-20-book-building-a-second-brain.md
examples/vault/01 - NOTES/daily/: 2026-06-08-daily-sunday.md
examples/vault/03 - AREAS/learning/: 2026-06-01-area-learning-2026.md
examples/vault/05 - ARCHIVE/: 2026-05-01-project-q1-writing-sprint.md
examples/vault/06 - SYSTEM/: CLAUDE.md
scripts/: security-gate.sh
skills/: capture-processor.md  claude-md.md  connection-finder.md  intelligence-layer.md  karpathy-ingest.md  local-llm-setup.md  map-of-content.md  permanent-note.md  project-completion.md  retrieval-organization.md  vault-prompts.md  vault-structure.md  weekly-ritual.md
synaptic/: __init__.py  cli.py  config.py  search.py
synaptic/briefs/: __init__.py  generator.py
synaptic/db/: __init__.py  store.py
synaptic/llm/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai_compat.py
synaptic/mcp/: server.py
synaptic/obsidian/: __init__.py  parser.py  vault.py
synaptic/privacy/: __init__.py  classifier.py
synaptic/tagging/: __init__.py  engine.py
synaptic/templates/: __init__.py  area.md  book.md  meeting.md  resource.md  weekly-review.md
tests/: test_init.py  test_mcp_server.py  test_store.py  test_templates.py  test_vault.py
(+10 files in other folders)
